src/vb/week3/calc/CalcParser.java
// $ANTLR 3.5 Calc.g 2013-05-16 15:27:59

package vb.week3.calc;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CalcParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BECOMES", "COLON", "COMMA", "COMMENT", 
		"DIGIT", "ELSE", "EQUALS", "GREATER", "GREATEREQ", "IDENTIFIER", "IF", 
		"INTEGER", "LETTER", "LOWER", "LPAREN", "MINUS", "NOTEQUALS", "NUMBER", 
		"PLUS", "PRINT", "PROGRAM", "QUOTIENT", "RPAREN", "SEMICOLON", "SMALLER", 
		"SMALLEREQ", "SWAP", "THEN", "TIMES", "UPPER", "VAR", "WS"
	};
	public static final int EOF=-1;
	public static final int BECOMES=4;
	public static final int COLON=5;
	public static final int COMMA=6;
	public static final int COMMENT=7;
	public static final int DIGIT=8;
	public static final int ELSE=9;
	public static final int EQUALS=10;
	public static final int GREATER=11;
	public static final int GREATEREQ=12;
	public static final int IDENTIFIER=13;
	public static final int IF=14;
	public static final int INTEGER=15;
	public static final int LETTER=16;
	public static final int LOWER=17;
	public static final int LPAREN=18;
	public static final int MINUS=19;
	public static final int NOTEQUALS=20;
	public static final int NUMBER=21;
	public static final int PLUS=22;
	public static final int PRINT=23;
	public static final int PROGRAM=24;
	public static final int QUOTIENT=25;
	public static final int RPAREN=26;
	public static final int SEMICOLON=27;
	public static final int SMALLER=28;
	public static final int SMALLEREQ=29;
	public static final int SWAP=30;
	public static final int THEN=31;
	public static final int TIMES=32;
	public static final int UPPER=33;
	public static final int VAR=34;
	public static final int WS=35;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CalcParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CalcParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CalcParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Calc.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// Calc.g:51:1: program : program_lines EOF -> ^( PROGRAM program_lines ) ;
	public final CalcParser.program_return program() throws RecognitionException {
		CalcParser.program_return retval = new CalcParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope program_lines1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_program_lines=new RewriteRuleSubtreeStream(adaptor,"rule program_lines");

		try {
			// Calc.g:52:5: ( program_lines EOF -> ^( PROGRAM program_lines ) )
			// Calc.g:52:9: program_lines EOF
			{
			pushFollow(FOLLOW_program_lines_in_program594);
			program_lines1=program_lines();
			state._fsp--;

			stream_program_lines.add(program_lines1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program596);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: program_lines
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 53:13: -> ^( PROGRAM program_lines )
			{
				// Calc.g:53:17: ^( PROGRAM program_lines )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_program_lines.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class program_lines_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program_lines"
	// Calc.g:56:1: program_lines : ( ( statement | declaration ) SEMICOLON !)* ;
	public final CalcParser.program_lines_return program_lines() throws RecognitionException {
		CalcParser.program_lines_return retval = new CalcParser.program_lines_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMICOLON5=null;
		ParserRuleReturnScope statement3 =null;
		ParserRuleReturnScope declaration4 =null;

		Object SEMICOLON5_tree=null;

		try {
			// Calc.g:57:2: ( ( ( statement | declaration ) SEMICOLON !)* )
			// Calc.g:57:4: ( ( statement | declaration ) SEMICOLON !)*
			{
			root_0 = (Object)adaptor.nil();


			// Calc.g:57:4: ( ( statement | declaration ) SEMICOLON !)*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IDENTIFIER||LA2_0==PRINT||LA2_0==SWAP||LA2_0==VAR) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Calc.g:57:5: ( statement | declaration ) SEMICOLON !
					{
					// Calc.g:57:5: ( statement | declaration )
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==IDENTIFIER||LA1_0==PRINT||LA1_0==SWAP) ) {
						alt1=1;
					}
					else if ( (LA1_0==VAR) ) {
						alt1=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}

					switch (alt1) {
						case 1 :
							// Calc.g:57:6: statement
							{
							pushFollow(FOLLOW_statement_in_program_lines637);
							statement3=statement();
							state._fsp--;

							adaptor.addChild(root_0, statement3.getTree());

							}
							break;
						case 2 :
							// Calc.g:57:18: declaration
							{
							pushFollow(FOLLOW_declaration_in_program_lines641);
							declaration4=declaration();
							state._fsp--;

							adaptor.addChild(root_0, declaration4.getTree());

							}
							break;

					}

					SEMICOLON5=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_program_lines644); 
					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program_lines"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// Calc.g:60:1: declaration : VAR ^ IDENTIFIER COLON ! type ;
	public final CalcParser.declaration_return declaration() throws RecognitionException {
		CalcParser.declaration_return retval = new CalcParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token VAR6=null;
		Token IDENTIFIER7=null;
		Token COLON8=null;
		ParserRuleReturnScope type9 =null;

		Object VAR6_tree=null;
		Object IDENTIFIER7_tree=null;
		Object COLON8_tree=null;

		try {
			// Calc.g:61:5: ( VAR ^ IDENTIFIER COLON ! type )
			// Calc.g:61:9: VAR ^ IDENTIFIER COLON ! type
			{
			root_0 = (Object)adaptor.nil();


			VAR6=(Token)match(input,VAR,FOLLOW_VAR_in_declaration663); 
			VAR6_tree = (Object)adaptor.create(VAR6);
			root_0 = (Object)adaptor.becomeRoot(VAR6_tree, root_0);

			IDENTIFIER7=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration666); 
			IDENTIFIER7_tree = (Object)adaptor.create(IDENTIFIER7);
			adaptor.addChild(root_0, IDENTIFIER7_tree);

			COLON8=(Token)match(input,COLON,FOLLOW_COLON_in_declaration668); 
			pushFollow(FOLLOW_type_in_declaration671);
			type9=type();
			state._fsp--;

			adaptor.addChild(root_0, type9.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// Calc.g:64:1: statement : ( assignment | print_stat | swap_stat );
	public final CalcParser.statement_return statement() throws RecognitionException {
		CalcParser.statement_return retval = new CalcParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignment10 =null;
		ParserRuleReturnScope print_stat11 =null;
		ParserRuleReturnScope swap_stat12 =null;


		try {
			// Calc.g:65:5: ( assignment | print_stat | swap_stat )
			int alt3=3;
			switch ( input.LA(1) ) {
			case IDENTIFIER:
				{
				alt3=1;
				}
				break;
			case PRINT:
				{
				alt3=2;
				}
				break;
			case SWAP:
				{
				alt3=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// Calc.g:65:9: assignment
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignment_in_statement694);
					assignment10=assignment();
					state._fsp--;

					adaptor.addChild(root_0, assignment10.getTree());

					}
					break;
				case 2 :
					// Calc.g:66:9: print_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_print_stat_in_statement704);
					print_stat11=print_stat();
					state._fsp--;

					adaptor.addChild(root_0, print_stat11.getTree());

					}
					break;
				case 3 :
					// Calc.g:67:7: swap_stat
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_swap_stat_in_statement712);
					swap_stat12=swap_stat();
					state._fsp--;

					adaptor.addChild(root_0, swap_stat12.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class assignment_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment"
	// Calc.g:70:1: assignment : lvalue BECOMES ^ assignment_mul ;
	public final CalcParser.assignment_return assignment() throws RecognitionException {
		CalcParser.assignment_return retval = new CalcParser.assignment_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BECOMES14=null;
		ParserRuleReturnScope lvalue13 =null;
		ParserRuleReturnScope assignment_mul15 =null;

		Object BECOMES14_tree=null;

		try {
			// Calc.g:71:5: ( lvalue BECOMES ^ assignment_mul )
			// Calc.g:71:9: lvalue BECOMES ^ assignment_mul
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_lvalue_in_assignment731);
			lvalue13=lvalue();
			state._fsp--;

			adaptor.addChild(root_0, lvalue13.getTree());

			BECOMES14=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_assignment733); 
			BECOMES14_tree = (Object)adaptor.create(BECOMES14);
			root_0 = (Object)adaptor.becomeRoot(BECOMES14_tree, root_0);

			pushFollow(FOLLOW_assignment_mul_in_assignment736);
			assignment_mul15=assignment_mul();
			state._fsp--;

			adaptor.addChild(root_0, assignment_mul15.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment"


	public static class assignment_mul_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assignment_mul"
	// Calc.g:74:1: assignment_mul : ( expr | lvalue BECOMES ^ assignment_mul );
	public final CalcParser.assignment_mul_return assignment_mul() throws RecognitionException {
		CalcParser.assignment_mul_return retval = new CalcParser.assignment_mul_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BECOMES18=null;
		ParserRuleReturnScope expr16 =null;
		ParserRuleReturnScope lvalue17 =null;
		ParserRuleReturnScope assignment_mul19 =null;

		Object BECOMES18_tree=null;

		try {
			// Calc.g:75:2: ( expr | lvalue BECOMES ^ assignment_mul )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==IF||LA4_0==LPAREN||LA4_0==NUMBER) ) {
				alt4=1;
			}
			else if ( (LA4_0==IDENTIFIER) ) {
				int LA4_2 = input.LA(2);
				if ( ((LA4_2 >= EQUALS && LA4_2 <= GREATEREQ)||(LA4_2 >= MINUS && LA4_2 <= NOTEQUALS)||LA4_2==PLUS||LA4_2==QUOTIENT||(LA4_2 >= SEMICOLON && LA4_2 <= SMALLEREQ)||LA4_2==TIMES) ) {
					alt4=1;
				}
				else if ( (LA4_2==BECOMES) ) {
					alt4=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// Calc.g:75:4: expr
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expr_in_assignment_mul754);
					expr16=expr();
					state._fsp--;

					adaptor.addChild(root_0, expr16.getTree());

					}
					break;
				case 2 :
					// Calc.g:76:4: lvalue BECOMES ^ assignment_mul
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_lvalue_in_assignment_mul759);
					lvalue17=lvalue();
					state._fsp--;

					adaptor.addChild(root_0, lvalue17.getTree());

					BECOMES18=(Token)match(input,BECOMES,FOLLOW_BECOMES_in_assignment_mul761); 
					BECOMES18_tree = (Object)adaptor.create(BECOMES18);
					root_0 = (Object)adaptor.becomeRoot(BECOMES18_tree, root_0);

					pushFollow(FOLLOW_assignment_mul_in_assignment_mul764);
					assignment_mul19=assignment_mul();
					state._fsp--;

					adaptor.addChild(root_0, assignment_mul19.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assignment_mul"


	public static class print_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "print_stat"
	// Calc.g:79:1: print_stat : PRINT ^ LPAREN ! expr RPAREN !;
	public final CalcParser.print_stat_return print_stat() throws RecognitionException {
		CalcParser.print_stat_return retval = new CalcParser.print_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PRINT20=null;
		Token LPAREN21=null;
		Token RPAREN23=null;
		ParserRuleReturnScope expr22 =null;

		Object PRINT20_tree=null;
		Object LPAREN21_tree=null;
		Object RPAREN23_tree=null;

		try {
			// Calc.g:80:5: ( PRINT ^ LPAREN ! expr RPAREN !)
			// Calc.g:80:9: PRINT ^ LPAREN ! expr RPAREN !
			{
			root_0 = (Object)adaptor.nil();


			PRINT20=(Token)match(input,PRINT,FOLLOW_PRINT_in_print_stat783); 
			PRINT20_tree = (Object)adaptor.create(PRINT20);
			root_0 = (Object)adaptor.becomeRoot(PRINT20_tree, root_0);

			LPAREN21=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_print_stat786); 
			pushFollow(FOLLOW_expr_in_print_stat789);
			expr22=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr22.getTree());

			RPAREN23=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_print_stat791); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "print_stat"


	public static class swap_stat_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "swap_stat"
	// Calc.g:83:1: swap_stat : SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !;
	public final CalcParser.swap_stat_return swap_stat() throws RecognitionException {
		CalcParser.swap_stat_return retval = new CalcParser.swap_stat_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SWAP24=null;
		Token LPAREN25=null;
		Token IDENTIFIER26=null;
		Token COMMA27=null;
		Token IDENTIFIER28=null;
		Token RPAREN29=null;

		Object SWAP24_tree=null;
		Object LPAREN25_tree=null;
		Object IDENTIFIER26_tree=null;
		Object COMMA27_tree=null;
		Object IDENTIFIER28_tree=null;
		Object RPAREN29_tree=null;

		try {
			// Calc.g:84:2: ( SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !)
			// Calc.g:84:4: SWAP ^ LPAREN ! IDENTIFIER COMMA ! IDENTIFIER RPAREN !
			{
			root_0 = (Object)adaptor.nil();


			SWAP24=(Token)match(input,SWAP,FOLLOW_SWAP_in_swap_stat810); 
			SWAP24_tree = (Object)adaptor.create(SWAP24);
			root_0 = (Object)adaptor.becomeRoot(SWAP24_tree, root_0);

			LPAREN25=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_swap_stat813); 
			IDENTIFIER26=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_swap_stat816); 
			IDENTIFIER26_tree = (Object)adaptor.create(IDENTIFIER26);
			adaptor.addChild(root_0, IDENTIFIER26_tree);

			COMMA27=(Token)match(input,COMMA,FOLLOW_COMMA_in_swap_stat818); 
			IDENTIFIER28=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_swap_stat821); 
			IDENTIFIER28_tree = (Object)adaptor.create(IDENTIFIER28);
			adaptor.addChild(root_0, IDENTIFIER28_tree);

			RPAREN29=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_swap_stat823); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "swap_stat"


	public static class lvalue_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "lvalue"
	// Calc.g:87:1: lvalue : IDENTIFIER ;
	public final CalcParser.lvalue_return lvalue() throws RecognitionException {
		CalcParser.lvalue_return retval = new CalcParser.lvalue_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENTIFIER30=null;

		Object IDENTIFIER30_tree=null;

		try {
			// Calc.g:88:5: ( IDENTIFIER )
			// Calc.g:88:9: IDENTIFIER
			{
			root_0 = (Object)adaptor.nil();


			IDENTIFIER30=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_lvalue840); 
			IDENTIFIER30_tree = (Object)adaptor.create(IDENTIFIER30);
			adaptor.addChild(root_0, IDENTIFIER30_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "lvalue"


	public static class expr_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// Calc.g:91:1: expr : expr_if ;
	public final CalcParser.expr_return expr() throws RecognitionException {
		CalcParser.expr_return retval = new CalcParser.expr_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope expr_if31 =null;


		try {
			// Calc.g:92:2: ( expr_if )
			// Calc.g:92:4: expr_if
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_if_in_expr858);
			expr_if31=expr_if();
			state._fsp--;

			adaptor.addChild(root_0, expr_if31.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr"


	public static class expr_if_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_if"
	// Calc.g:95:1: expr_if : ( IF ^ expr_if THEN ! expr_if ELSE ! expr_if | expr_rel );
	public final CalcParser.expr_if_return expr_if() throws RecognitionException {
		CalcParser.expr_if_return retval = new CalcParser.expr_if_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IF32=null;
		Token THEN34=null;
		Token ELSE36=null;
		ParserRuleReturnScope expr_if33 =null;
		ParserRuleReturnScope expr_if35 =null;
		ParserRuleReturnScope expr_if37 =null;
		ParserRuleReturnScope expr_rel38 =null;

		Object IF32_tree=null;
		Object THEN34_tree=null;
		Object ELSE36_tree=null;

		try {
			// Calc.g:96:2: ( IF ^ expr_if THEN ! expr_if ELSE ! expr_if | expr_rel )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IF) ) {
				alt5=1;
			}
			else if ( (LA5_0==IDENTIFIER||LA5_0==LPAREN||LA5_0==NUMBER) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// Calc.g:96:4: IF ^ expr_if THEN ! expr_if ELSE ! expr_if
					{
					root_0 = (Object)adaptor.nil();


					IF32=(Token)match(input,IF,FOLLOW_IF_in_expr_if873); 
					IF32_tree = (Object)adaptor.create(IF32);
					root_0 = (Object)adaptor.becomeRoot(IF32_tree, root_0);

					pushFollow(FOLLOW_expr_if_in_expr_if876);
					expr_if33=expr_if();
					state._fsp--;

					adaptor.addChild(root_0, expr_if33.getTree());

					THEN34=(Token)match(input,THEN,FOLLOW_THEN_in_expr_if878); 
					pushFollow(FOLLOW_expr_if_in_expr_if881);
					expr_if35=expr_if();
					state._fsp--;

					adaptor.addChild(root_0, expr_if35.getTree());

					ELSE36=(Token)match(input,ELSE,FOLLOW_ELSE_in_expr_if883); 
					pushFollow(FOLLOW_expr_if_in_expr_if886);
					expr_if37=expr_if();
					state._fsp--;

					adaptor.addChild(root_0, expr_if37.getTree());

					}
					break;
				case 2 :
					// Calc.g:97:4: expr_rel
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expr_rel_in_expr_if891);
					expr_rel38=expr_rel();
					state._fsp--;

					adaptor.addChild(root_0, expr_rel38.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expr_if"


	public static class expr_rel_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "expr_rel"
	// Calc.g:100:1: expr_rel : expr_plus ( ( GREATER ^| SMALLER ^| GREATEREQ ^| SMALLEREQ ^| EQUALS ^| NOTEQUALS ^) expr_plus )* ;
	public final CalcParser.expr_rel_return expr_rel() throws RecognitionException {
		CalcParser.expr_rel_return retval = new CalcParser.expr_rel_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token GREATER40=null;
		Token SMALLER41=null;
		Token GREATEREQ42=null;
		Token SMALLEREQ43=null;
		Token EQUALS44=null;
		Token NOTEQUALS45=null;
		ParserRuleReturnScope expr_plus39 =null;
		ParserRuleReturnScope expr_plus46 =null;

		Object GREATER40_tree=null;
		Object SMALLER41_tree=null;
		Object GREATEREQ42_tree=null;
		Object SMALLEREQ43_tree=null;
		Object EQUALS44_tree=null;
		Object NOTEQUALS45_tree=null;

		try {
			// Calc.g:101:2: ( expr_plus ( ( GREATER ^| SMALLER ^| GREATEREQ ^| SMALLEREQ ^| EQUALS ^| NOTEQUALS ^) expr_plus )* )
			// Calc.g:101:4: expr_plus ( ( GREATER ^| SMALLER ^| GREATEREQ ^| SMALLEREQ ^| EQUALS ^| NOTEQUALS ^) expr_plus )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_expr_plus_in_expr_rel906);
			expr_plus39=expr_plus();
			state._fsp--;

			adaptor.addChild(root_0, expr_plus39.getTree());

			// Calc.g:101:14: ( ( GREATER ^| SMALLER ^| GREATEREQ ^| SMALLEREQ ^| EQUALS ^| NOTEQUALS ^) expr_plus )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
